Changed the toolbar font size in bartik

--- a/themes/bartik/css/style.css
+++ b/themes/bartik/css/style.css
@@ -1,6 +1,10 @@
 
 /* ---------- Overall Specifications ---------- */
 
+body #toolbar {
+  font-size: 15px;
+}
+
 body {
   line-height: 1.5;
   font-size: 87.5%;
